# shipshapeshop

./: .gitignore  AGENTS.md  CHARACTERS.md  COPY_GUIDE.md  DESIGN.md  LEDGER_VOICE.md  LICENSE-APACHE  LICENSE-MIT  MUSIC_MODE.md  ORRERY_PLAN.md  PROGRESSION_AUDIT.md  README.md  RENDERING_PLAN.md  package.json
.github/workflows/: ci.yml
content/loc/: ja-zh-character-direction.json
core/: Cargo.toml
core/src/: content.rs  expedition.rs  flux.rs  gacha.rs  game.rs  lib.rs  orrery.rs  rng.rs
relay/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.jsonc
relay/scripts/: set-billing-alert.sh  smoke.mjs
relay/src/: index.ts
web/: .gitignore  .npmrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/public/fonts/: fonts.css
web/public/models/: README.md  armadillo.ply  benchy.ply  bunny.ply  heptoroid.ply  lucy.ply
web/scripts/: hwaccel-wslg.sh  screenshots.mjs
web/src/: App.tsx  ExpeditionMap.tsx  ExpeditionView.tsx  MusicEngineInspector.tsx  MusicStylesSettings.tsx  OrreryBoard.tsx  OrreryEngine.tsx  WorkshopTree.tsx  audio.ts  bedControl.ts  bedStatus.ts  buttonJuice.ts  cosmeticsQuick.ts  curatorRank.ts  devmode.ts  dialogLog.ts  format.ts  gfx.ts  gfxProbe.ts  help.ts  history.ts  i18n.ts  inspector.ts  juice.css  juice.tsx  main.tsx  meter.test.ts  musicPrefs.ts  nav.ts  onboarding.ts  opencc-js.d.ts  orreryAudio.test.ts  orreryAudio.ts  orreryBed.test.ts  orreryBed.ts  orreryBedDriver.tsx  orreryUi.ts  shapes.test.ts  titleArt.ts  vite-env.d.ts
web/src/chatlas/: chatlasNet.ts  chatlasPlus.ts  mutes.ts  (+6 more)
(+76 files in other folders)
