[package]
name = "shipshape-core"
version = "0.0.0"
edition = "2021"
description = "Ship Shape Shop — deterministic simulation core (compiled to WASM)."
license = "MIT"

[lib]
# cdylib → WASM for the web app; rlib → native `cargo test` of the same code.
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
